--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 
-</html>
-<html><hr />
+<html>
+  <head>
+    <title>sample webpage</title>
+    <link rel="stylesheet" href="samplecss.css"/>
+  </head>
+  <body><hr />
 <h1><center>
 Sample Webpage
 </center></h1><br />
@@ -43,4 +47,5 @@ Sample Webpage
   click the below link to send your feedback
 </p>
 <a href="contact me.html">response Feedback</a>
-</html>
+  </body>
+ </html>
