--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>sample webpage</title>
-    <link rel="stylesheet" href="samplecss.css"/>
+    <link rel="stylesheet" href="sampleweb.css"/>
   </head>
   <body><hr />
 <h1><center>
